--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,10 @@ services:
     ports:
       - "5433:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - pgdata_produto:/var/lib/postgresql/data
 
   fiap-produto-service:
-    image: draraujoo/fiap-produto-service:latest
+    build: .
     container_name: fiap-produto-service
     depends_on:
       - fiap-produto-postgres
@@ -20,9 +20,9 @@ services:
       QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://fiap-produto-postgres:5432/productdb
       QUARKUS_DATASOURCE_USERNAME: postgres
       QUARKUS_DATASOURCE_PASSWORD: postgres
-      QUARKUS_HTTP_PORT: 8081
+      QUARKUS_HTTP_PORT: 8080
     ports:
-      - "8081:8081"
+      - "8081:8080"
 
 volumes:
-  pgdata:
+  pgdata_produto:
